--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,14 @@
 [package]
-name = "crypto-trade"
+name = "swing_trade_alert"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
+reqwest = { version = "0.12", features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "1", features = ["full"] }
+chrono = "0.4"
+clap = { version = "4.0", features = ["derive"] }
+dotenv = "0.15"
+clap = { version = "4.5.42", features = ["derive"] }
