--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 chrono = "0.4"
-clap = { version = "4.0", features = ["derive"] }
 dotenv = "0.15"
 clap = { version = "4.5.42", features = ["derive"] }
+tracing = "0.1.41"
+strum = { version = "0.27.2", features = ["derive"] }
+strum_macros = "0.27.2"
